[DDW-580] Separated amount and asset and added Fee column

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1137,13 +1137,15 @@
   "wallet.transactions.csv.column.addressesFrom": "送信元アドレス",
   "wallet.transactions.csv.column.addressesTo": "送信先アドレス",
   "wallet.transactions.csv.column.amount": "額",
+  "wallet.transactions.csv.column.asset": "!!!Asset",
   "wallet.transactions.csv.column.dateTime": "日時",
+  "wallet.transactions.csv.column.fee": "!!!Fee (ADA)",
   "wallet.transactions.csv.column.id": "ID",
   "wallet.transactions.csv.column.status": "ステータス",
   "wallet.transactions.csv.column.type": "タイプ",
   "wallet.transactions.csv.column.withdrawals": "引き出し",
   "wallet.transactions.csv.filenamePrefix": "トランザクション",
-  "wallet.transactions.csv.value.amount": "{amount} ADA",
+  "wallet.transactions.csv.value.amount": "!!!{amount} ADA",
   "wallet.transactions.csv.value.statusConfirmed": "承認済み",
   "wallet.transactions.csv.value.statusPending": "保留中",
   "wallet.transactions.csv.value.type.received": "入金",
