--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -17791,13 +17791,13 @@
         "description": "Transactions CSV column - ID",
         "end": {
           "column": 3,
-          "line": 18
+          "line": 22
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.id",
         "start": {
           "column": 12,
-          "line": 14
+          "line": 18
         }
       },
       {
@@ -17805,13 +17805,13 @@
         "description": "Transactions CSV column - Type",
         "end": {
           "column": 3,
-          "line": 23
+          "line": 27
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.type",
         "start": {
           "column": 14,
-          "line": 19
+          "line": 23
         }
       },
       {
@@ -17819,13 +17819,41 @@
         "description": "Transactions CSV column - Amount",
         "end": {
           "column": 3,
-          "line": 28
+          "line": 32
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.amount",
         "start": {
           "column": 16,
-          "line": 24
+          "line": 28
+        }
+      },
+      {
+        "defaultMessage": "!!!Asset",
+        "description": "Transactions CSV column - Amount currency",
+        "end": {
+          "column": 3,
+          "line": 37
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.asset",
+        "start": {
+          "column": 15,
+          "line": 33
+        }
+      },
+      {
+        "defaultMessage": "!!!Fee (ADA)",
+        "description": "Transactions CSV column - Fee",
+        "end": {
+          "column": 3,
+          "line": 42
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.column.fee",
+        "start": {
+          "column": 13,
+          "line": 38
         }
       },
       {
@@ -17833,13 +17861,13 @@
         "description": "Transactions CSV column - DateTime",
         "end": {
           "column": 3,
-          "line": 33
+          "line": 47
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.dateTime",
         "start": {
           "column": 18,
-          "line": 29
+          "line": 43
         }
       },
       {
@@ -17847,13 +17875,13 @@
         "description": "Transactions CSV column - Status",
         "end": {
           "column": 3,
-          "line": 38
+          "line": 52
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.status",
         "start": {
           "column": 16,
-          "line": 34
+          "line": 48
         }
       },
       {
@@ -17861,13 +17889,13 @@
         "description": "Transactions CSV column - AddressesFrom",
         "end": {
           "column": 3,
-          "line": 43
+          "line": 57
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.addressesFrom",
         "start": {
           "column": 23,
-          "line": 39
+          "line": 53
         }
       },
       {
@@ -17875,13 +17903,13 @@
         "description": "Transactions CSV column - AddressesTo",
         "end": {
           "column": 3,
-          "line": 48
+          "line": 62
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.addressesTo",
         "start": {
           "column": 21,
-          "line": 44
+          "line": 58
         }
       },
       {
@@ -17889,13 +17917,13 @@
         "description": "Transactions CSV column - Withdrawals",
         "end": {
           "column": 3,
-          "line": 53
+          "line": 67
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.column.withdrawals",
         "start": {
           "column": 21,
-          "line": 49
+          "line": 63
         }
       },
       {
@@ -17903,13 +17931,13 @@
         "description": "Transactions CSV value - Type Sent",
         "end": {
           "column": 3,
-          "line": 58
+          "line": 72
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.value.type.sent",
         "start": {
           "column": 17,
-          "line": 54
+          "line": 68
         }
       },
       {
@@ -17917,13 +17945,13 @@
         "description": "Transactions CSV value - Type Received",
         "end": {
           "column": 3,
-          "line": 63
+          "line": 77
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.value.type.received",
         "start": {
           "column": 21,
-          "line": 59
+          "line": 73
         }
       },
       {
@@ -17931,13 +17959,13 @@
         "description": "Transactions CSV value - Amount",
         "end": {
           "column": 3,
-          "line": 68
+          "line": 82
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.value.amount",
         "start": {
           "column": 15,
-          "line": 64
+          "line": 78
         }
       },
       {
@@ -17945,13 +17973,13 @@
         "description": "Transactions CSV value - Status Confirmed",
         "end": {
           "column": 3,
-          "line": 73
+          "line": 87
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.value.statusConfirmed",
         "start": {
           "column": 24,
-          "line": 69
+          "line": 83
         }
       },
       {
@@ -17959,13 +17987,13 @@
         "description": "Transactions CSV value - Status Pending",
         "end": {
           "column": 3,
-          "line": 78
+          "line": 92
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.value.statusPending",
         "start": {
           "column": 22,
-          "line": 74
+          "line": 88
         }
       },
       {
@@ -17973,13 +18001,13 @@
         "description": "Transactions CSV \"Transactions\" filename",
         "end": {
           "column": 3,
-          "line": 83
+          "line": 97
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
         "id": "wallet.transactions.csv.filenamePrefix",
         "start": {
           "column": 18,
-          "line": 79
+          "line": 93
         }
       }
     ],
