[DDW-580] Implement the Tokens column

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1136,12 +1136,12 @@
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Cardanoエクスプローラーでこのトランザクションを開き",
   "wallet.transactions.csv.column.addressesFrom": "送信元アドレス",
   "wallet.transactions.csv.column.addressesTo": "送信先アドレス",
-  "wallet.transactions.csv.column.amount": "額",
-  "wallet.transactions.csv.column.asset": "!!!Asset",
+  "wallet.transactions.csv.column.amount": "!!!Amount (ADA)",
   "wallet.transactions.csv.column.dateTime": "日時",
   "wallet.transactions.csv.column.fee": "!!!Fee (ADA)",
   "wallet.transactions.csv.column.id": "ID",
   "wallet.transactions.csv.column.status": "ステータス",
+  "wallet.transactions.csv.column.tokens": "!!!Tokens",
   "wallet.transactions.csv.column.type": "タイプ",
   "wallet.transactions.csv.column.withdrawals": "引き出し",
   "wallet.transactions.csv.filenamePrefix": "トランザクション",
