--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1136,12 +1136,12 @@
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Open this transaction in Cardano explorer",
   "wallet.transactions.csv.column.addressesFrom": "Addresses from",
   "wallet.transactions.csv.column.addressesTo": "Addresses to",
-  "wallet.transactions.csv.column.amount": "Amount",
-  "wallet.transactions.csv.column.asset": "Asset",
+  "wallet.transactions.csv.column.amount": "Amount (ADA)",
   "wallet.transactions.csv.column.dateTime": "Date & time",
   "wallet.transactions.csv.column.fee": "Fee (ADA)",
   "wallet.transactions.csv.column.id": "ID",
   "wallet.transactions.csv.column.status": "Status",
+  "wallet.transactions.csv.column.tokens": "Tokens",
   "wallet.transactions.csv.column.type": "Type",
   "wallet.transactions.csv.column.withdrawals": "Withdrawals",
   "wallet.transactions.csv.filenamePrefix": "Transactions",
