--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1141,7 +1141,7 @@
   "wallet.transactions.csv.column.fee": "手数料 (ADA)",
   "wallet.transactions.csv.column.id": "ID",
   "wallet.transactions.csv.column.status": "ステータス",
-  "wallet.transactions.csv.column.tokens": "!!!Tokens",
+  "wallet.transactions.csv.column.tokens": "トークン",
   "wallet.transactions.csv.column.type": "タイプ",
   "wallet.transactions.csv.column.withdrawals": "引き出し",
   "wallet.transactions.csv.filenamePrefix": "トランザクション",
