--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -755,6 +755,7 @@
   "wallet.hardware.deviceStatus.connecting": "Connect your device and enter your PIN to unlock it",
   "wallet.hardware.deviceStatus.connecting.failed": "Unable to detect your hardware wallet device.",
   "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\" device and enter your PIN to unlock it",
+  "wallet.hardware.deviceStatus.enterPassphrase": "Enter passphrase if needed",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your hardware wallet to restart the process.",
   "wallet.hardware.deviceStatus.exporting_public_key": "Export the public key on your device",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "Exporting the public key failed",
