--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1136,9 +1136,11 @@
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Open this transaction in Cardano explorer",
   "wallet.transactions.csv.column.addressesFrom": "Addresses from",
   "wallet.transactions.csv.column.addressesTo": "Addresses to",
-  "wallet.transactions.csv.column.amount": "Amount (ADA)",
+  "wallet.transactions.csv.column.amount.deposit": "Deposit amount (ADA)",
+  "wallet.transactions.csv.column.amount.fee": "Fee (ADA)",
+  "wallet.transactions.csv.column.amount.sent": "Sent amount (ADA)",
+  "wallet.transactions.csv.column.amount.total": "TOTAL (ADA)",
   "wallet.transactions.csv.column.dateTime": "Date & time",
-  "wallet.transactions.csv.column.fee": "Fee (ADA)",
   "wallet.transactions.csv.column.id": "ID",
   "wallet.transactions.csv.column.status": "Status",
   "wallet.transactions.csv.column.tokens": "Tokens",
