--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1136,9 +1136,11 @@
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Cardanoエクスプローラーでこのトランザクションを開き",
   "wallet.transactions.csv.column.addressesFrom": "送信元アドレス",
   "wallet.transactions.csv.column.addressesTo": "送信先アドレス",
-  "wallet.transactions.csv.column.amount": "報酬（ADA）",
+  "wallet.transactions.csv.column.amount.deposit": "デポジット額（ADA）",
+  "wallet.transactions.csv.column.amount.fee": "手数料（ADA）",
+  "wallet.transactions.csv.column.amount.sent": "送金額（ADA）",
+  "wallet.transactions.csv.column.amount.total": "総額（ADA）",
   "wallet.transactions.csv.column.dateTime": "日時",
-  "wallet.transactions.csv.column.fee": "手数料 (ADA)",
   "wallet.transactions.csv.column.id": "ID",
   "wallet.transactions.csv.column.status": "ステータス",
   "wallet.transactions.csv.column.tokens": "トークン",
