[DDW-511] Implement Trezor device passphrase handling (#2284)
* [DDW-511] Implement Trezor passphrase handling - INIT

* [DDW-511] Fix yarn.lock

* [DDW-511] Fix yarn.lock

* [DDW-511] Changelog update and run prettier

* [DDW-511] Fix yarn.lock

* [DDW-511] Updates CHANGELOG

* [DDW-511] yarn.lock update

* [DDW-511] Handle passphrase cached  state and wrong passphrase on tx send

* [DDW-511] Run prettier

* [DDW-511] Apply Trezor event types from trezor-connect and change flow-type declarations due to that

* [DDW-511] Fix yarn.lock and CHANGELOG

* [DDW-511] Add additional passphrase label to hardware wallet status ONLY for Trezor

* [DDW-511] Add Japanese translation for the additional Enter Passphrase label

* [DDW-511] Improve device type recognizing

* [DDW-511] Added new device type check

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -755,6 +755,7 @@
   "wallet.hardware.deviceStatus.connecting": "デバイスを接続してPINを入力し、ロックを解除してください",
   "wallet.hardware.deviceStatus.connecting.failed": "ハードウェアウォレットデバイスを検出できません。",
   "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してPINを入力し、ロックを解除してください",
+  "wallet.hardware.deviceStatus.enterPassphrase": "必要に応じてパスフレーズを入力してください",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "ハードウェアウォレットを切断して再接続し、もう一度プロセスを始めてください。",
   "wallet.hardware.deviceStatus.exporting_public_key": "デバイス上で公開鍵をエクスポートしてください",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "公開鍵のエクスポートができません",
