[DDW-609] Content and effect progress

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -412,8 +412,10 @@
   "staking.epochs.tableHeader.performance": "Performance",
   "staking.epochs.tableHeader.sharedRewards": "Shared rewards",
   "staking.info.buttonLabel": "Learn more",
-  "staking.info.description": "Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
-  "staking.info.heading": "Cardano is transitioning into a decentralized system",
+  "staking.info.before.description": "Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
+  "staking.info.before.heading": "Fully decentralized block production",
+  "staking.info.after.description": "Stake pools are now producing 100% of Cardano blocks!",
+  "staking.info.after.heading": "The Cardano network is now fully decentralized for block production.",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
   "staking.info.percentage": "Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "Delegation center",
