--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -472,6 +472,11 @@
   "staking.rewards.tableHeader.wallet": "Wallet",
   "staking.rewards.title": "Earned delegation rewards",
   "staking.stakePools.delegatingListTitle": "Staking pools you are delegating to",
+  "staking.stakePools.filter.apply": "Apply",
+  "staking.stakePools.filter.poolsWithoutOffChainData": "Pools without off-chain data",
+  "staking.stakePools.filter.privatePools": "Private pools",
+  "staking.stakePools.filter.resetFilter": "Reset Filter",
+  "staking.stakePools.filter.retiringPools": "Retiring pools",
   "staking.stakePools.learnMore": "Learn more",
   "staking.stakePools.listTitle": "Stake pools",
   "staking.stakePools.listTitleLoading": "Loading stake pools",
