--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -472,6 +472,11 @@
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
+  "staking.stakePools.filter.apply": "適用する",
+  "staking.stakePools.filter.poolsWithoutOffChainData": "!!!Pools without off-chain data",
+  "staking.stakePools.filter.privatePools": "!!!Private pools",
+  "staking.stakePools.filter.resetFilter": "フィルターをリセットする",
+  "staking.stakePools.filter.retiringPools": "!!!Retiring pools",
   "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール",
   "staking.stakePools.listTitleLoading": "ステークプールをロード中",
