[DDW-435] Apply dynamic style to stake pool search input

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -473,10 +473,10 @@
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.filter.apply": "適用する",
-  "staking.stakePools.filter.poolsWithoutOffChainData": "!!!Pools without off-chain data",
-  "staking.stakePools.filter.privatePools": "!!!Private pools",
+  "staking.stakePools.filter.poolsWithoutOffChainData": "オフチェーンデータのないプール",
+  "staking.stakePools.filter.privatePools": "プライベートプール",
   "staking.stakePools.filter.resetFilter": "フィルターをリセットする",
-  "staking.stakePools.filter.retiringPools": "!!!Retiring pools",
+  "staking.stakePools.filter.retiringPools": "終了予定のプール",
   "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール",
   "staking.stakePools.listTitleLoading": "ステークプールをロード中",
@@ -522,7 +522,7 @@
   "staking.stakePools.tooltip.costPerEpochTooltip": "各エポックで得られた報酬から差し引かれるステークプールの固定運営費",
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "実験的機能データは不正確な場合があります",
-  "staking.stakePools.tooltip.noData": "!!!No data",
+  "staking.stakePools.tooltip.noData": "データなし",
   "staking.stakePools.tooltip.pledge": "出資：",
   "staking.stakePools.tooltip.pledgeTooltip": "プールオペレーターが自分のプールに投資するステーク量で、出資額が多いプールは、より多くの報酬を自身と委任者にもたらすが、出資をしないプールは報酬を稼ぐことができず、ランクが低くなる",
   "staking.stakePools.tooltip.potentialRewards": "見込み報酬額：",
